--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<input type="text" id="empRole" class="form-control" placeholder="What is he?">
 					</div>
 					<div class="input-group">
-						<label for="empStartDate">Employee Name (MM/DD/YYYY)</label>
+						<label for="empStartDate">Employee Start Date</label>
 						<input type="date" id="empStartDate" class="form-control" placeholder="When did he start working? ">
 					</div>
 					<div class="input-group">
